--- a/css/lvl99-dbs.less
+++ b/css/lvl99-dbs.less
@@ -8,14 +8,26 @@
 	
 	th.lvl99-dbs-filelist-col-file,
 	td.lvl99-dbs-filelist-col-file {
-		width: 55%;
+		width: 45%;
 		text-align: left;
+	}
+	
+	th.lvl99-dbs-filelist-col-size,
+	td.lvl99-dbs-filelist-col-size {
+		width: 15%;
+		text-align: center;
+	}
+	
+	th.lvl99-dbs-filelist-col-created,
+	td.lvl99-dbs-filelist-col-created {
+		width: 15%;
+		text-align: center;
 	}
 	
 	th.lvl99-dbs-filelist-col-controls,
 	td.lvl99-dbs-filelist-col-controls {
-		width: 30%;
-		text-align: left;
+		width: 20%;
+		text-align: center;
 	}
 	
 }
