--- a/css/lvl99-dbs.less
+++ b/css/lvl99-dbs.less
@@ -115,3 +115,27 @@
 	padding-top: 1em;
 	padding-left: 1em;
 }
+
+.lvl99-dbs-loading {
+	font-style: italic;
+	color: #666;
+}
+
+.lvl99-dbs-loading-spinner {
+	display: inline-block;
+	width: 24px;
+	height: 24px;
+	line-height: 24px;
+	vertical-align: middle;
+
+	background: transparent url('../media/loading-spinner-24x24.gif') no-repeat center center;
+}
+
+form[disabled] {
+	button,
+	.button,
+	input[type=button],
+	input[type=submit] {
+		opacity: 0.5;
+	}
+}
